--- a/webapp/index.html
+++ b/webapp/index.html
@@ -12,7 +12,7 @@
     </style>
     <script
         id="sap-ui-bootstrap"
-        src="resources/sap-ui-core.js"
+        src="https://openui5.hana.ondemand.com/1.52.11/resources/sap-ui-core.js"
         data-sap-ui-theme="sap_fiori_3"
         data-sap-ui-resourceroots='{
             "Z.myworklis": "./"
