--- a/webapp/index.html
+++ b/webapp/index.html
@@ -10,18 +10,16 @@
             height: 100%;
         }
     </style>
-    <script
-        id="sap-ui-bootstrap"
-        src="https://openui5.hana.ondemand.com/1.52.11/resources/sap-ui-core.js"
-        data-sap-ui-theme="sap_fiori_3"
-        data-sap-ui-resourceroots='{
-            "Z.myworklis": "./"
-        }'
-        
-        data-sap-ui-compatVersion="edge"
-        data-sap-ui-async="true"
-        data-sap-ui-frameOptions="trusted"
-    ></script>
+  <script
+  id="sap-ui-bootstrap"
+  src="https://openui5.hana.ondemand.com/1.52.11/resources/sap-ui-core.js"
+  data-sap-ui-resourceroots='{
+      "Z.myworklis": "./"
+  }'
+  data-sap-ui-libs="sap.m"
+  data-sap-ui-theme="sap_bluecrystal"		
+  data-sap-ui-compatVersion="edge"
+></script>
 </head>
 <body class="sapUiBody sapUiSizeCompact" id="content">
     <div
