--- a/webapp/index.html
+++ b/webapp/index.html
@@ -28,7 +28,7 @@
         });
 </script>
 </head>
-<body class="sapUiBody sapUiSizeCompact" id="content" role="application">
+<body class="sapUiBody" id="content" role="application">
     <div id="content"></div>
 </body>
 </html>
