--- a/webapp/index.html
+++ b/webapp/index.html
@@ -17,7 +17,7 @@
             "Z.myworklis": "./"
         }'
         data-sap-ui-libs="sap.m"
-		data-sap-ui-theme="sap_bluecrystal"		
+		data-sap-ui-theme="sap_fiori_3"		
 		data-sap-ui-compatVersion="edge"
     ></script>
     <script>
