--- a/webapp/index.html
+++ b/webapp/index.html
@@ -17,7 +17,7 @@
             "Z.myworklis": "./"
         }'
         data-sap-ui-libs="sap.m"
-		data-sap-ui-theme="sap_fiori_3"		
+		data-sap-ui-theme="sap_belize"		
 		data-sap-ui-compatVersion="edge"
     ></script>
     <script>
@@ -28,7 +28,7 @@
         });
 </script>
 </head>
-<body class="sapUiBody" id="content" role="application">
+<body id="content" role="application">
     <div id="content"></div>
 </body>
 </html>
