--- a/webapp/index.html
+++ b/webapp/index.html
@@ -3,13 +3,9 @@
 <head>
     
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta http-equiv='Content-Type' content='text/html;charset=UTF-8'/>
+    <meta charset="UTF-8">
     <title>Daily Activity Sheet</title>
-    <style>
-        html, body, body > div, #container, #container-uiarea {
-            height: 50%;
-        }
-    </style>
+    
     <script
         id="sap-ui-bootstrap"
         src="https://openui5.hana.ondemand.com/1.52.11/resources/sap-ui-core.js"
