changes manifest and index

--- a/webapp/index.html
+++ b/webapp/index.html
@@ -3,18 +3,17 @@
 <head>
     
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta charset="UTF-8">
+    <meta http-equiv='Content-Type' content='text/html;charset=UTF-8'/>
     <title>Daily Activity Sheet</title>
     
-    <script
-        id="sap-ui-bootstrap"
-        src="https://openui5.hana.ondemand.com/1.52.11/resources/sap-ui-core.js"
-        data-sap-ui-resourceroots='{
-            "Z.myworklis": "./"
-        }'
+    <script src="https://openui5.hana.ondemand.com/1.52.11/resources/sap-ui-core.js"
+        id="sap-ui-bootstrap"        
         data-sap-ui-libs="sap.m"
 		data-sap-ui-theme="sap_belize"		
 		data-sap-ui-compatVersion="edge"
+        data-sap-ui-resourceroots='{
+            "Z.myworklis": "./"
+        }'
     ></script>
     <script>
         sap.ui.getCore().attachInit(function(){
