--- a/webapp/index.html
+++ b/webapp/index.html
@@ -26,12 +26,8 @@
 </script>
 </head>
 <body id="content" role="application">
-    <div 
-        data-sap-ui-component
-        data-name="Z.myworklis"
-        data-id="content"
-        data-settings='{"id" : "Z.myworklis"}'
-        data-handle-validation="true"
+    <div
+        id="content"
     ></div>
 </body>
 </html>
