--- a/webapp/index.html
+++ b/webapp/index.html
@@ -15,8 +15,8 @@
             "Z.myworklis": "./"
         }'
         data-sap-ui-async="true"
-        data-sap-ui-frameOptions="trusted"
-    ></script>
+    >
+</script>
     <script>
         sap.ui.getCore().attachInit(function(){
             new sap.ui.core.ComponentContainer({
@@ -26,8 +26,7 @@
 </script>
 </head>
 <body id="content" role="application">
-    <div
-        id="content"
+    <div id="content"
     ></div>
 </body>
 </html>
