--- a/webapp/index.html
+++ b/webapp/index.html
@@ -74,7 +74,7 @@
 
 </script>
 </head>
-<body id="content" role="application">
+<body role="application">
     <div id="content" style="display: block; width: 2000px; height: 10000px; background-color: green;"
     ></div>
 </body>
