--- a/webapp/index.html
+++ b/webapp/index.html
@@ -3,7 +3,7 @@
 <head>
     
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-    
+
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv='Content-Type' content='text/html;charset=UTF-8'/>
     <title>Daily Activity Sheet</title>
@@ -30,7 +30,7 @@
 </head>
 
 <body role="application">
-    <div id="content" style="display: block; width: 200px; height: 100px; background-color: green;"
+    <div id="content"
     ></div>
 </body>
 </html>
