--- a/webapp/index.html
+++ b/webapp/index.html
@@ -21,6 +21,7 @@
 </script>
 
     <script>
+    
         sap.ui.getCore().attachInit(function(){
             new sap.ui.core.ComponentContainer({
                 name:"Z.myworklis"
@@ -30,7 +31,7 @@
 </head>
 
 <body role="application">
-    <div id="content"
+    <div id="content" style="display: block; width: 2000px; height: 10000px; background-color: green;"
     ></div>
 </body>
 </html>
