--- a/webapp/index.html
+++ b/webapp/index.html
@@ -11,7 +11,8 @@
     <script src="https://openui5.hana.ondemand.com/1.52.11/resources/sap-ui-core.js"
         id="sap-ui-bootstrap"        
         data-sap-ui-libs="sap.m"
-		data-sap-ui-theme="sap_belize"		
+        data-sap-ui-theme="sap_bluecrystal"
+        data-sap-ui-xx-bindingSyntax="complex"		
 		data-sap-ui-compatVersion="edge"
         data-sap-ui-resourceroots='{
             "Z.myworklis": "./"
@@ -20,18 +21,18 @@
     >
 </script>
 
-    <script>
-    
-        sap.ui.getCore().attachInit(function(){
-            new sap.ui.core.ComponentContainer({
-                name:"Z.myworklis"
-            }).placeAt("content");
-        });
-</script>
+
+<script>
+ sap.ui.getCore().attachInit(function(){newsap.m.Shell({   
+
+appWidthLimited:false,
+            app:newsap.ui.core.ComponentContainer({
+                height :"100%",name:"Z.myworklis"
+                })}).placeAt("content");});
+    </script>
+
 </head>
-<body id="content" role="application">
-    <div id="content"
-    ></div>
+<body class="sapUiBody" id="content">
 </body>
 </html>
 
